--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "demo",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel index.html",
+    "dev": "vite dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,7 +16,8 @@
   },
   "devDependencies": {
     "@types/three": "^0.163.0",
-    "parcel": "^2.12.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.10",
+    "vite-plugin-glsl": "^1.3.0"
   }
 }
