--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@types/three": "^0.163.0",
+    "gltfpack": "^0.20.0",
     "typescript": "^5.4.5",
     "vite": "^5.2.10",
     "vite-plugin-glsl": "^1.3.0"
